<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/createNoteLayout"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_note"
        android:id="@+id/createNoteTextView"
        android:textSize="32sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createNoteTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        android:hint="@string/title"
        android:padding="8dp"
        android:textSize="22sp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/createNoteTextEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="start|top|center_vertical"
        android:layout_weight="1"
        android:background="@android:drawable/editbox_background"
        android:gravity="start|top"
        android:hint="@string/your_note"
        android:padding="8dp"/>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/createNoteButton"
        android:textSize="22sp"
        android:padding="8dp"/>

</LinearLayout>